Added login/logout/signup pages with no styling

--- a/accounts/templates/accounts/create_account.html
+++ b/accounts/templates/accounts/create_account.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<h1>Login</h1>
+<h1>Create Account</h1>
 
 <form method="post">
 	<!-- Token for rotection against cross site request forgeries -->
@@ -10,8 +10,8 @@
 
     <!-- Render entries as paragraphs <p>User Stuff...</p> -->
     {{ form.as_p }}
-
-    <button type="submit">Login</button>
+    
+    <button type="submit">Create Account</button>
 </form>
 
 {% endblock %}
