added scoring and fixed start timer bug

--- a/timer/templates/index.html
+++ b/timer/templates/index.html
@@ -2,6 +2,13 @@
 
 {% block body %}
 
+<!-- Nav -->
+<nav>
+    <div>
+        Score: <span id="score-span">0</span> pts
+    </div>  
+</nav>
+
 <h1>Pomodoro Posse Timer</h1>
 <!-- Buttons to select a Pomodoro, short break, or long break -->
 <div>
