--- a/accounts/templates/accounts/change_default_times.html
+++ b/accounts/templates/accounts/change_default_times.html
@@ -2,14 +2,20 @@
 
 {% block body %}
 
-    <h1>Change default times</h1>
-    <p><a href="profile">Back to profile</a></p>
+    <h1>User: {{ UserProfile.pk }}, Change default times</h1>
+    <p><a href="../">Back to profile</a></p>
     <form method="post">
         <!-- Token for rotection against cross site request forgeries -->
         {% csrf_token %}
 
         <!-- Render entries as paragraphs <p>User Stuff...</p> -->
         {{ form.as_p }}
+
+        Task length: <input type="text" id="task-length" name="task-length" value="{{ UserProfile.task_length }}"> <br>
+        Task length: <input type="text" id="short-rest-length" name="short-rest-length"
+                            value="{{ UserProfile.short_rest_length }}"> <br>
+        Task length: <input type="text" id="long-rest-length" name="long-rest-length"
+                            value="{{ UserProfile.long_rest_length }}"> <br>
 
         <button type="submit">Save</button>
     </form>
