Fix back button link

--- a/accounts/templates/accounts/change_default_times.html
+++ b/accounts/templates/accounts/change_default_times.html
@@ -3,7 +3,7 @@
 {% block body %}
 
     <h1>User: {{ UserProfile.pk }}, Change default times</h1>
-    <p><a href="../">Back to profile</a></p>
+    <p><a href="../../">Back to profile</a></p>
     <form method="post">
         <!-- Token for rotection against cross site request forgeries -->
         {% csrf_token %}
