Added default task name and edit ability Turned on sessions so that task names are based on user sessions. The task name is saved as a session variable/list called tastName. The task name is not saved to the database but does persist in the session and other users will not see it. (Each user can have their own task name).
Added a separate page to handle this (editTask.html) Will do it in the
same page once I get better at Django.

I will add this to the database once that is figured out as well.

--- a/timer/templates/index.html
+++ b/timer/templates/index.html
@@ -11,7 +11,7 @@
 </div>
 <br>
 <!-- Timer display -->
-<div>
+<div id="timer">
     <span id="minsValue">00</span><span>:</span><span id="secsValue">00</span>
 </div>
 <br>
@@ -21,6 +21,12 @@
     <button type="button" id="pauseButton">Pause</button>
     <button type="button" id="resetButton">Reset</button>
 </div>
+<br>
+<div id="taskName">
+    Task Name: {{taskName}}     <a href="{% url 'editTask' %}">Edit</a>
+</div>
+
+    
 {% load static %}
 <script src="{% static '/js/timer.js' %}" type="text/javascript"></script>
 {% endblock %}
