--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,21 @@
 	<title>Pomodoro Posse</title>
 </head>
 <body>
+	<div>
+		{% if user.username %}
+			Hello {{ user.username }}		
+			<a href="{% url 'index' %}">Timer</a>
+			<a href="{% url 'profile' %}">Profile</a>
+			<a href="{% url 'logout' %}">Log Out</a>
+		{% else %}
+			<a href="{% url 'login' %}">Log In</a>
+			<a href="{% url 'createaccount' %}">Create Account</a>
+		{% endif %}
+	</div>
+
 	{% block body %}
 
-	<p>Hello World!</p>
+	<p>Missing Body</p>
 
 	{% endblock %}
 </body>
