--- a/timer/templates/index.html
+++ b/timer/templates/index.html
@@ -3,11 +3,15 @@
 {% block body %}
 
 <!-- Nav -->
-<nav>
-    <div>
-        Score: <span id="score-span">0</span> pts
-    </div>  
-</nav>
+{% if user.username %}
+    Score: <span id="score_span">{{score}}</span> pts
+{% else %}
+    Login to keep track of your score
+{% endif %}
+<div>
+    
+</div>
+
 
 <h1>Pomodoro Posse Timer</h1>
 <!-- Buttons to select a Pomodoro, short break, or long break -->
@@ -30,10 +34,12 @@
 </div>
 <br>
 <div id="taskName">
-    Task Name: {{taskName}}     <a href="{% url 'editTask' %}">Edit</a>
+    Task Name: {{taskName}} <a href="{% url 'editTask' %}">Edit</a>
 </div>
 
-    
+
 {% load static %}
 <script src="{% static '/js/timer.js' %}" type="text/javascript"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
 {% endblock %}
