--- a/timer/templates/index.html
+++ b/timer/templates/index.html
@@ -2,41 +2,44 @@
 
 {% block body %}
 
-<div>
-    {% if user.username %}
-    Score: <span id="score_span">{{score}}</span> pts
-    {% else %}
-    Login to keep track of your score
-    {% endif %}
-</div>
+    <div>
+        {% if user.username %}
+            Score: <span id="score_span">{{ score }}</span> pts
+        {% else %}
+            Login to keep track of your score
+        {% endif %}
+    </div>
 
-<h1>Pomodoro Posse Timer</h1>
-<!-- Buttons to select a Pomodoro, short break, or long break -->
-<div>
-    <button type="button" id="pomodoroModeButton">Pomodoro</button>
-    <button type="button" id="shortBreakModeButton">Short Break</button>
-    <button type="button" id="longBreakModeButton">Long Break</button>
-</div>
-<br>
-<!-- Timer display -->
-<div id="timer">
-    <span id="minsValue">00</span><span>:</span><span id="secsValue">00</span>
-</div>
-<br>
-<!-- Buttons to Play, Pause, and Reset the timer -->
-<div>
-    <button type="button" id="startButton">Start</button>
-    <button type="button" id="pauseButton">Pause</button>
-    <button type="button" id="resetButton">Reset</button>
-</div>
-<br>
-<div id="taskName">
-    Task Name: {{taskName}} <a href="{% url 'editTask' %}">Edit</a>
-</div>
+    <h1>Pomodoro Posse Timer</h1>
+    <!-- Buttons to select a Pomodoro, short break, or long break -->
+    <div>
+        <button type="button" id="pomodoroModeButton" value="{{ user.userprofile.task_length }}">Pomodoro</button>
+        <button type="button" id="shortBreakModeButton" value="{{ user.userprofile.short_rest_length }}">Short Break
+        </button>
+        <button type="button" id="longBreakModeButton" value="{{ user.userprofile.long_rest_length }}">Long Break
+        </button>
+    </div>
+    <br>
+    <!-- Timer display -->
+    <div id="timer">
+        <span id="minsValue">00</span><span>:</span><span id="secsValue">00</span>
+    </div>
+    <br>
+    <!-- Buttons to Play, Pause, and Reset the timer -->
+    <div>
+        <button type="button" id="startButton">Start</button>
+        <button type="button" id="pauseButton">Pause</button>
+        <button type="button" id="resetButton">Reset</button>
+    </div>
+    <br>
+    <div id="taskName">
+        Task Name: {{ taskName }} <a href="{% url 'editTask' %}">Edit</a>
+    </div>
 
 
-{% load static %}
-<script src="{% static '/js/timer.js' %}" type="text/javascript"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin="anonymous"></script>
+    {% load static %}
+    <script src="{% static '/js/timer.js' %}" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+            integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+            crossorigin="anonymous"></script>
 {% endblock %}
