Replace userprofile with user

--- a/accounts/templates/accounts/change_default_times.html
+++ b/accounts/templates/accounts/change_default_times.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h1>User: {{ UserProfile.pk }}, Change default times</h1>
+    <h1>User: {{ user.pk }}, Change default times</h1>
     <p><a href="{% url 'profile' %}">Back to profile</a></p>
     <form method="post">
         <!-- Token for rotection against cross site request forgeries -->
