--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -20,6 +20,6 @@
     {% endfor %}
 
 
-    <p><a href="{% url 'change-default-times' 1 %}">Change default times</a></p>
+    <p><a href="{% url 'change-default-times' %}">Change default times</a></p>
 
 {% endblock %}
