--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <button><a href="{% url 'index' %}">Back to timer</a></button>
+    <a href="{% url 'index' %}">Back to timer</a>
 
     <h1>Profile</h1>
 
