Add link to stylesheet

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 <head>
     <title>Pomodoro Posse</title>
     <link rel="shortcut icon" type="image/png" href="{% static '../static/images/favicon.ico' %}"/>
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
 <div>
