--- a/templates/base.html
+++ b/templates/base.html
@@ -1,30 +1,61 @@
 {% load static %}
 {% load bootstrap4 %}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='full' %}
 
 <!doctype html>
 <html>
+
 <head>
     <title>Pomodoro Posse</title>
-    <link rel="shortcut icon" type="image/png" href="{% static '../static/images/favicon.ico' %}"/>
+    <link rel="shortcut icon" type="image/png" href="{% static '../static/images/favicon.ico' %}" />
     <link rel="stylesheet" href="/static/styles.css">
+    
 </head>
+
 <body>
-<div>
-    {% if user.username %}
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">Pomodoro Posse</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav justify-content-end">
+                
+                {% if user.username %}
+                Hello {{ user.username }}
+                <a class="px-3" href="{% url 'logout' %}">Log Out</a>
+                {% else %}
+                <li class="nav-item px-3">
+                    <a href="{% url 'login' %}">Log In</a>
+                </li>
+                <li class="nav-item px-3">
+                    <a href="{% url 'createaccount' %}">Create Account</a>
+                </li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
+
+    <!-- <div>
+        {% if user.username %}
         Hello {{ user.username }}
         <a href="{% url 'index' %}">Timer</a>
         <a href="{% url 'profile' %}">Profile</a>
         <a href="{% url 'logout' %}">Log Out</a>
-    {% else %}
+        {% else %}
         <a href="{% url 'login' %}">Log In</a>
         <a href="{% url 'createaccount' %}">Create Account</a>
-    {% endif %}
-</div>
+        {% endif %}
+    </div>
 
-{% block body %}
+    {% block body %}
 
     <p>Missing Body</p>
 
-{% endblock %}
+    {% endblock %}
 </body>
+
 </html>
