fixed commented section bug

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
         <a href="{% url 'login' %}">Log In</a>
         <a href="{% url 'createaccount' %}">Create Account</a>
         {% endif %}
-    </div>
+    </div>  -->
 
     {% block body %}
 
