--- a/accounts/templates/accounts/create_account.html
+++ b/accounts/templates/accounts/create_account.html
@@ -1,17 +1,43 @@
 {% extends 'base.html' %}
-
+{% load bootstrap4 %}
+{% bootstrap_css %}
 {% block body %}
 
-<h1>Create Account</h1>
 
-<form method="post">
-	<!-- Token for rotection against cross site request forgeries -->
-    {% csrf_token %}
 
-    <!-- Render entries as paragraphs <p>User Stuff...</p> -->
-    {{ form.as_p }}
-    
-    <button type="submit">Create Account</button>
-</form>
+<div class="container">
+    <div class="row">
+        <div class="col-md-2">
+            
+        </div>
+
+        <div class="col-12 col-md-8 d-flex justify-content-center">
+            <div class="card p-3 mt-4">
+                <div class="d-flex justify-content-center">
+                    <h2>Create Account</h2>
+                </div>
+                
+                <form method="post">
+                    <!-- Token for rotection against cross site request forgeries -->
+                    {% csrf_token %}
+                
+                    {% bootstrap_form form %}
+                
+                    <div class="d-flex justify-content-center">
+                        {% buttons %}
+                        <button type="submit" class="btn-submit btn mt-3 ">Create Account</button>
+                        {% endbuttons %}
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="col-md-2">
+            
+        </div>
+    </div>
+</div>
+
+
 
 {% endblock %}
