--- a/timer/templates/editUserSession.html
+++ b/timer/templates/editUserSession.html
@@ -1,13 +1,32 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
+{% bootstrap_css %}
 {% block body %} 
-<h1>Edit Your Pomodoro Session Name</h1>
 
-<form action="{% url 'editUserSession' %}" method="POST">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit">
-</form>
-<a href="{% url 'index' %}">Back to Timer</a>
+<div class="container">
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-12 col-md-8 d-flex justify-content-center">
+            <div class="card p-3 mt-4">
+                <div class="d-flex justify-content-center">
+                    <h2>Edit Session Name</h2>
+                </div>
+                <form action="{% url 'editUserSession' %}" method="POST">
+                    {% csrf_token %}
+                    {% bootstrap_form form %}
+                    <div class="d-flex justify-content-center">
+                        {% buttons %}
+                        <a class="btn-submit btn" href="{% url 'index' %}">Cancel</a>
+                        <button type="submit" class="btn-submit btn">Save</button>
+                        {% endbuttons %}
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+</div>
+
 
 
 {% endblock body %}
