--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -6,7 +6,7 @@
     <script src="../../static/js/profile.js" type="text/javascript"></script>
     <div class="container">
         <div class="row mt-4 p-4 justify-content-center">
-            <div class="col-md-8">
+            <div class="col-12 col-md-6">
                 <div class="card text-center">
                     <img class="mx-auto" style="width: 40px" src="../../../static/images/tomatoheader.png">
                     <h1>Profile</h1>
@@ -37,13 +37,13 @@
         </div>
     </div>
 
-    <div class="container col-md-8">
+    <div class="container">
         <div class="row">
-            <div class="card col-md-12 text-center">
-                <div class="card-title"><h2>Garden</h2></div>
+            <div class="card text-center col-12">
+                <div class="card-title pt-3"><h2>Garden</h2></div>
             </div>
             <div class="card-group">
-                <div class="col-sm card text-center border-0" id="plant1">
+                <div class="card text-center border-0" id="plant1">
                     <img src="" id="plant-image1">
                     <script>getPlantImage(1, {{ user.userprofile.plant1_stage }});</script>
                     <div class="card-footer border-0">
