--- a/templates/base.html
+++ b/templates/base.html
@@ -4,15 +4,15 @@
 {% bootstrap_javascript jquery='full' %}
 
 <!doctype html>
-<html>
+<html lang="en" xml:lang="en" xmlns= "http://www.w3.org/1999/xhtml">
 
-<head>
+<head >
     <title>Pomodoro Posse</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="{% static '../static/images/favicon.ico' %}"/>
     <script src="https://kit.fontawesome.com/cd776babcb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/static/styles.css">
-
+    
 </head>
 
 <body>
