--- a/timer/templates/index.html
+++ b/timer/templates/index.html
@@ -85,14 +85,14 @@
     <div id="finished-task-modal" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header-success modal-header">
               <h5 class="modal-title">Congratulations!</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
-              <p id="finished-task-modal-text">message</p>
+              <p id="finished-task-modal-text">This is a modal message that will appear.</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Dismiss</button>
@@ -105,17 +105,17 @@
     <div id="shortBreakModal" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header-warning modal-header">
               <h5 class="modal-title">Warning!</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
-              <p id="short-break-modal-text">message</p>
+              <p id="short-break-modal-text">This is a modal message that will appear.</p>
             </div>
             <div class="modal-footer">
-              <button onclick="confirmShortBreak()" type="button" class="btn btn-primary">Take a Break</button>
+              <button onclick="confirmShortBreak()" type="button" class="btn modal-btn">Take a Break</button>
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Return to Task</button>
             </div>
           </div>
@@ -125,17 +125,17 @@
       <div id="longBreakModal" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Warning</h5>
+            <div class="modal-header-warning modal-header">
+              <h5 class="modal-title">Warning!</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
-              <p id="long-break-modal-text">message</p>
+              <p id="long-break-modal-text">This is another modal message that will appear</p>
             </div>
             <div class="modal-footer">
-              <button onclick="confirmLongBreak()" type="button" class="btn btn-primary">Take a Break</button>
+              <button onclick="confirmLongBreak()" type="button" class="btn modal-btn ">Take a Break</button>
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Return to Task</button>
             </div>
           </div>
